[project]
name = "abms"
version = "0.1.0"
description = "abms using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
abms = "abms.main:run"
run_crew = "abms.main:run"
train = "abms.main:train"
replay = "abms.main:replay"
test = "abms.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
